--- a/templates/blog/blogPost.html
+++ b/templates/blog/blogPost.html
@@ -1,6 +1,15 @@
 {% extends 'base.html' %}
 
-{% block title %} BLOGPOST {% endblock title %}
+{% block title %} Blogpost{% endblock title %}
+
 {% block body %}
-<h3>This blogPost page</h3>>
-{% endblock body %} 
+<div class="container my-3">
+<div class="blog-post">
+        <h2 class="blog-post-title">{{post.title}}</h2>
+        <p class="blog-post-meta">{{post.timeStamp}} by <a href="#">{{post.author}}</a></p>
+
+        <p>{{post.content}}</p>
+        <hr>
+      </div>
+      </div>
+ {% endblock %}
