--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %} ABOUT {% endblock title %}
+{% block aboutactive %} active {% endblock aboutactive %}
 {% block body %}
 <h3>This is About page</h3>
 {% endblock body %}
