--- a/templates/home/search.html
+++ b/templates/home/search.html
@@ -1,12 +1,25 @@
 {% extends 'base.html' %}
 
-{% block title %} BlogHome {% endblock title %}
+{% block title %} Search Results {% endblock title %}
 {% block blogactive %} active {% endblock blogactive %} 
 
 
 {% block body %}
 <div class="container my-3">
-    <h2>Coding Articles by RockyCoder</h2>
+    <h2>Search Results:</h2>
+    {% if allPosts|length < 1 %}
+    
+    <p>your search doesn't match to any Query</p>  
+
+    Your search - <b>{{query}}</b> - did not match any documents.<br>
+    Suggestions:</br>
+    <ul>
+    <li>Make sure that all words are spelled correctly</li>
+    <li>Try different Keywords.</li>
+    <li>Try more general Keywords.</li>
+    <li>Try fewer keywords.</li>
+   </ul>
+    {% endif %}
     {% for post in allPosts  %}
     <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 my-4 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
