--- a/templates/base.html
+++ b/templates/base.html
@@ -1,243 +1,172 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>{% block title %}   {% endblock title %}</title>
+  </head>
+  <body>
 
-  <title>{% block title %} {%endblock title %}</title>
-</head>
-
-<body>
-
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">
-        <h6>Rocky Block</h6>
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-        aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarScroll">
-        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/">
-              <h6>Home</h6>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about">
-              <h6>About</h6>
-            </a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="/blog">
-              <h6>Blog</h6>
-            </a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="/contact">
-              <h6>Contact</h6>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/own">
-              <h6>Test</h6>
-            </a>
-          </li>
-
-        </ul>
-
-        <!-- <a href="/" role="button" target="_blank" class="btn btn-outline-success me-1">Home</a>
-        <a href="/about" role="button" target="_blank" class="btn btn-outline-success me-1">About</a>
-        <a href="/blog" role="button" target="_blank" class="btn btn-outline-success me-1">Blog</a>
-        <a href="/contact" role="button" target="_blank" class="btn btn-outline-success me-1">Contact</a>
-        <a href="/own" role="button" target="_blank" class="btn btn-outline-success me-1">Test</a> -->
-        <form method="get" action="search" class="d-flex m-1">
-          <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search" name="query"
-            id="query">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-
-          <!-- Button trigger SignUp modal -->
-          <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signupModal">
-            SignUp
-          </button> -->
-
-        </form>
-        <a href="/admin" role="button" target="_blank" class="btn btn-outline-success me-1">Admin-Panel</a>
-
-
-        {% if user.is_authenticated %}
-        <ul class="btn btn-outline-success me-1">
-        {% comment %} <ul class="navbar-nav mr-2"> {% endcomment %}
-        <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href='#' id="navbarDropdown" role="button" data-toggle="dropdown"> Welcome {{request.user}}</a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="btn btn-outline-success me-1"class="dropdown-item" href="/logout">Logout</a>
-                </div>
-              </li>
-              </ul>
-              </div>
-        {% else %}
-
-        <!-- Button trigger login modal -->
-        <button type="button" class="btn btn-outline-success me-1" data-bs-toggle="modal" data-bs-target="#loginModal">
-          Login
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">Rocky Block</a>
+        <button class="navbar-toggler" type="button" data-toggle  ="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-
-        <!-- Button trigger SignUp modal -->
-        <button type="button" class="btn btn-outline-success me-1" data-bs-toggle="modal" data-bs-target="#signupModal">
-          SignUp
-        </button>
-        {% endif %}
-
-
-
-      </div>
-    </div>
-  </nav>
-
-  {% for message in messages %}
-  <div class="alert alert-{{ message.tags }} mb-0 alert-dismissible fade show" role="alert">
-    <strong>Message: </strong> {{ message }}
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-  </div>
-  {% endfor %}
-
-
-
-
-
-  <!--SignUp Modal -->
-  <div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="signupModal" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="signupModalTitle">Sign Up Now</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <form action="/signup" method='post'>
-            {% csrf_token %}
-            <div class="mb-3">
-              <label for="username" class="form-label">Username</label>
-              <input type="text" class="form-control" id="username" name="username"
-                placeholder="Choose a unique username (Lowercase & alphnumeric)" required>
-              <!-- <div id="emailHelp" class="form-text">choose a unique username</div> -->
-            </div>
-            <div class="mb-3">
-              <label for="fname" class="form-label">First Name</label>
-              <input type="text" class="form-control" id="fname" name="fname" placeholder="Enter your first name"
-                required>
-              <!-- <div id="emailHelp" class="form-text">Enter your first name here</div> -->
-            </div>
-            <div class="mb-3">
-              <label for="lname" class="form-label">Last Name</label>
-              <input type="text" class="form-control" id="lname" name="lname" placeholder="Enter your last name"
-                required>
-              <!-- <div id="email" class="form-text">Enter your last name here</div> -->
-            </div>
-            <div class="mb-3">
-              <label for="email" class="form-label">Email Address</label>
-              <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email here"
-                required>
-              <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-            </div>
-            <div class="mb-3">
-              <label for="pass1" class="form-label">Choose a Password</label>
-              <input type="password" class="form-control" id="pass1" name="pass1" placeholder="Choose your password"
-                required>
-            </div>
-            <div class="mb-3">
-              <label for="pass2" class="form-label">Confirm Password</label>
-              <input type="password" class="form-control" id="pass2" name="pass2"
-                placeholder="Enter your password again" required>
-            </div>
-
-            <!-- <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>  -->
-            {% csrf_token %}
-            <button type="submit" class="btn btn-primary text-center">Signup</button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item {% block homeactive %}  {% endblock homeactive %}">
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item {% block aboutactive %}  {% endblock aboutactive %}" >
+              <a class="nav-link" href="/about">About</a>
+            </li>
+            <li class="nav-item {% block contactactive %}  {% endblock contactactive %} ">
+              <a class="nav-link" href="/contact">Contact</a>
+            </li>
+            <li class="nav-item {% block blogactive %}  {% endblock blogactive %} ">
+              <a class="nav-link" href="/blog">Blog</a>
+            </li>
+            <li class="nav-item {% block ownactive %}  {% endblock ownactive %} ">
+              <a class="nav-link" href="/own">Test</a>
+            </li>
+            
+          </ul>
+          <div class="ml-auto form-inline ">
+          <form method="get" action="/search"class="my-2 my-lg-0 mx-3">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query">
+            <button class="btn btn-success my-2 my-sm-0 " type="submit">Search</button>
+            <!-- <a href="/admin" role="button" target="_blank" class="btn btn-outline-success m-2 my-sm-0"> Admin Panel </a> -->
           </form>
 
+     
+
+{% if user.is_authenticated %}
+<ul class="navbar-nav mr-2">
+<li class="nav-item dropdown">
+<a class="nav-link dropdown-toggle bg-success" href='#' id="navbarDropdown" role="button" data-toggle="dropdown"> Welcome {{request.user}}</a>
+<div class="dropdown-menu bg-danger" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/logout">Logout</a>
         </div>
-        <!-- <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div> -->
+      </li>
+      </ul>
+      </div>
+{% else %}
+  <!-- Button to  trigger Login modal -->
+<button type="button" class="btn btn-danger mr-2" data-toggle="modal" data-target="#loginModal">
+Login
+</button>
+
+<button type="button" class="btn btn-primary mr-2" data-toggle="modal" data-target="#signupModal">
+SignUp
+</button>
+{% endif %}
+
+
+        </div>
+      </nav>
+      {% for message in messages  %}            
+      <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            <strong>Message : </strong> {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+      {% endfor %}    
+
+
+
+ 
+
+<!-- SignUp Modal -->
+<div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="signupModal" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="signupModalTitle">SignUp Here</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form action= "/signup" method='post'>
+  <div class="form-group">
+    <label for="username">Username</label>
+    <input type="text" class="form-control" id="username" name="username" placeholder="Choose a unique username" required>
+  </div>
+  <div class="form-group">
+    <label for="fname">First Name</label>
+    <input type="text" class="form-control" id="fname" name="fname" placeholder="Enter Your First Name" required>
+  </div>
+  <div class="form-group">
+    <label for="lname">Last Name</label>
+    <input type="text" class="form-control" id="lname" name="lname" placeholder="Enter Your Last Name" required>
+  </div>
+  <div class="form-group">
+    <label for="email">Email address</label>
+    <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com" required>
+  </div>
+  <div class="form-group">
+    <label for="pass1">Choose a password</label>
+    <input type="password" class="form-control" id="pass1" name="pass1" placeholder="Choose Your Password" required>
+  </div>
+  <div class="form-group">
+    <label for="pass2">Confirm Password</label>
+    <input type="password" class="form-control" id="pass2" name="pass2" placeholder="Enter your password again" required>
+  </div>
+ 
+
+        {% csrf_token %}
+        <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+      </div>
+      <div class="modal-footer">
       </div>
     </div>
   </div>
+</div>
 
-  <!-- Signup end here -->
 
+      {% block body %}  {% endblock body %}
+      {% block js %}
+      {% endblock js %}
 
-  <!-- Login Modal -->
-  <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModal" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="loginModalTitle">Login Here</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-
-          <form action="/login" method='post'>
-            {% csrf_token %}
-            <div class="mb-3">
-              <label for="loginusername" class="form-label">Username</label>
-              <input type="text" class="form-control" id="loginusername" name="loginusername"
-                aria-describedby="emailHelp" placeholder="Enter your username" required>
-              <!-- <div id="emailHelp" class="form-text">choose a unique username</div> -->
-            </div>
-            <div class="mb-3">
-              <label for="pass" class="form-label">Enter Your Password</label>
-              <input type="password" class="form-control" id="loginpassword" name="loginpassword"
-                placeholder="Enter your password" required>
-            </div>
-
-            <!-- <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div> -->
-            <button type="submit" class="btn btn-primary">login</button>
-          </form>
-
-        </div>
-
-        <!-- <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div> -->
-
+<!-- Login Modal -->
+<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModal" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="loginModalTitle">Login Here</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
-    </div>
+      <div class="modal-body">
+        <form action="/login" method="POST"> {% csrf_token %}
+  <div class="form-group">
+    <label for="username">Username</label>
+    <input type="text" class="form-control" id="loginusername" name="loginusername" placeholder="Enter your username "required>
   </div>
-  <!-- Login end here -->
+  <div class="form-group">
+    <label for="pass">Enter your password </label>
+    <input type="password" class="form-control" id="loginpassword" name="loginpassword" placeholder="Enter your password "required>
+  </div>
+ 
+        <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+      </div>
+       <div class="modal-footer">
+      </div>
 
-  {% block body %}
-  {% endblock body %}
-
-  <!-- Optional JavaScript; choose one of the two! -->
-
-  <!-- Option 1: Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-
-  <!-- Option 2: Separate Popper and Bootstrap JS -->
-  <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
-</body>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  </body>
+</html>
