--- a/templates/home/own.html
+++ b/templates/home/own.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %} Rockyself {% endblock title %}
-
+{% block ownactive %} active {% endblock ownactive %}
 {% block body %}
 <body>
     
